Use Java 22 thread ID API in runtime index writer